sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:13: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T:Array[Int]
      ^AlgInsertionSort:17: error: not found: value nums
  for(i<-1 to nums.length -1)
              ^